share/iptables
# Generated by iptables-save v1.4.8 on Sun Feb  3 18:25:11 2013
*nat
:PREROUTING ACCEPT [156:21208]
:POSTROUTING ACCEPT [1:104]
:OUTPUT ACCEPT [1:104]
-A PREROUTING -p tcp -m tcp --dport 3080 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3081 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3082 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3083 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3084 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3085 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3086 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3087 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3088 -j DNAT --to-destination @IP:4082
-A PREROUTING -p tcp -m tcp --dport 3089 -j DNAT --to-destination @IP:4082
COMMIT
# Completed on Sun Feb  3 18:25:11 2013
# Generated by iptables-save v1.4.8 on Sun Feb  3 18:25:11 2013
*filter
:INPUT ACCEPT [703:90004]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [336:26976]
COMMIT
# Completed on Sun Feb  3 18:25:11 2013
